feat: expose catalogs for user creation
